force-app/main/default/objects/Account/fields/Partnership_Unit__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Unit__c</fullName>
    <label>Partnership Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cyber</fullName>
            </value>
            <value>
                <fullName>Tech</fullName>
            </value>
            <value>
                <fullName>Cyber &amp; Tech</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>