force-app/main/default/objects/Account/fields/Power__c.field-meta.xml
<CustomField>
    <fullName>Power__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Power</label>
    <type>Checkbox</type>
</CustomField>