force-app/main/default/objects/Account/fields/Primary_Channel_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Primary_Channel_Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identify Fortra user that manage the partner relationship</description>
    <label>Primary Channel Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>