force-app/main/default/objects/Account/fields/Primary_Partner_Marketer__c.field-meta.xml
<CustomField>
    <fullName>Primary_Partner_Marketer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identify Fortra user that manage the partner relationship</description>
    <label>Primary Partner Marketer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>