force-app/main/default/objects/Account/fields/Processing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Processing_Notes__c</fullName>
    <label>Processing Notes</label>
    <type>TextArea</type>
</CustomField>