force-app/main/default/objects/Account/fields/Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>Processing_Status__c</fullName>
    <label>Processing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Matching Unsuccessful</fullName>
            </value>
            <value>
                <fullName>Ready for Assignment</fullName>
            </value>
            <value>
                <fullName>Manual Assignment Required</fullName>
            </value>
            <value>
                <fullName>Assignment Successful</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>