force-app/main/default/objects/Account/fields/pse__Add_BEIs_To_Existing_Batches__c.field-meta.xml
<CustomField>
    <fullName>pse__Add_BEIs_To_Existing_Batches__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, all existing billing event items are added to an existing billing event instead of creating a new billing event.</description>
    <inlineHelpText>If selected, all existing billing event items are added to an existing billing event instead of creating a new billing event.</inlineHelpText>
    <label>Add BEIs To Existing Batches</label>
    <type>Checkbox</type>
</CustomField>