force-app/main/default/objects/Account/fields/pse__Services_Billing_Time_Period_Type__c.field-meta.xml
<CustomField>
    <fullName>pse__Services_Billing_Time_Period_Type__c</fullName>
    <label>Services Billing Time Period Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Week</fullName>
            </value>
            <value>
                <fullName>Month</fullName>
            </value>
            <value>
                <fullName>Quarter</fullName>
            </value>
            <value>
                <fullName>Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>