force-app/main/default/objects/Account/fields/RPA_Plus__c.field-meta.xml
<CustomField>
    <fullName>RPA_Plus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RPA Plus</label>
    <type>Checkbox</type>
</CustomField>