force-app/main/default/objects/Account/fields/salesintelio__Attempted_Enrichment_Disposition__c.field-meta.xml
<CustomField>
    <fullName>salesintelio__Attempted_Enrichment_Disposition__c</fullName>
    <inlineHelpText>Users can determine which records are up to date and what happened on that record. In cases where SalesIntel has attempted to enrich the record, but no new data was found - the users will be confident that enrichment has run. (Matched / Unmatched / Invalid)</inlineHelpText>
    <label>Attempted Enrichment Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Matched</fullName>
            </value>
            <value>
                <fullName>Unmatched</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>