force-app/main/default/objects/Account/fields/salesintelio__Data_Source__c.field-meta.xml
<CustomField>
    <fullName>salesintelio__Data_Source__c</fullName>
    <inlineHelpText>For Accounts and Contacts - Data Source will Indicate SalesIntel was the source of the record. On a Lead, you can add SalesIntel to the Lead Source field choices.</inlineHelpText>
    <label>Data Source</label>
    <length>155</length>
    <type>Text</type>
</CustomField>