force-app/main/default/objects/Account/fields/salesintelio__First_Enriched_Date__c.field-meta.xml
<CustomField>
    <fullName>salesintelio__First_Enriched_Date__c</fullName>
    <description>Field to capture date on which enrichment running for the first time</description>
    <inlineHelpText>Date that data was added to the record for the first time.</inlineHelpText>
    <label>First Enriched Date</label>
    <type>Date</type>
</CustomField>