force-app/main/default/objects/Account/fields/salesintelio__Last_Enriched_Date__c.field-meta.xml
<CustomField>
    <fullName>salesintelio__Last_Enriched_Date__c</fullName>
    <description>Field to capture date on which enrichment lastly ran</description>
    <inlineHelpText>If the record has produced a positive Enrichment, then the date that Enrichment was made will populate. Each Enrichment event will update the field.</inlineHelpText>
    <label>Last Enriched Date</label>
    <type>Date</type>
</CustomField>