force-app/main/default/objects/Account/fields/salesintelio__SalesIntel_Enriched__c.field-meta.xml
<CustomField>
    <fullName>salesintelio__SalesIntel_Enriched__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If SalesIntel has added data to a record with the checkbox will be marked TRUE</inlineHelpText>
    <label>SalesIntel Enriched?</label>
    <type>Checkbox</type>
</CustomField>