force-app/main/default/objects/Account/fields/salesintelio__SalesIntel_Enrichment_Accuracy_Tier__c.field-meta.xml
<CustomField>
    <fullName>salesintelio__SalesIntel_Enrichment_Accuracy_Tier__c</fullName>
    <label>SalesIntel Enrichment Accuracy Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HUMAN_VERIFIED</fullName>
                <label>Human Verified</label>
            </value>
            <value>
                <fullName>EMAIL_VERIFIED</fullName>
                <label>Email Verified</label>
            </value>
            <value>
                <fullName>MACHINE_VERIFIED</fullName>
                <label>Machine Verified</label>
            </value>
            <value>
                <fullName>OUTDATED</fullName>
                <label>Outdated</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>