force-app/main/default/objects/Account/fields/salesintelio__SalesIntel_Exported__c.field-meta.xml
<CustomField>
    <fullName>salesintelio__SalesIntel_Exported__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SalesIntel Exported</label>
    <type>Checkbox</type>
</CustomField>