force-app/main/default/objects/Account/fields/Statement_Delivery_Type__c.field-meta.xml
<CustomField>
    <fullName>Statement_Delivery_Type__c</fullName>
    <defaultValue>&quot;Email&quot;</defaultValue>
    <label>Statement Delivery Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
                <default>true</default>
                <label>Email</label>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
                <isActive>false</isActive>
                <label>Admin</label>
            </value>
            <value>
                <fullName>E-mail</fullName>
                <isActive>false</isActive>
                <label>E-mail</label>
            </value>
            <value>
                <fullName>Print and Email</fullName>
                <isActive>false</isActive>
                <label>Print and Email</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>