force-app/main/default/objects/Account/fields/Temperature_Change_Note__c.field-meta.xml
<CustomField>
    <fullName>Temperature_Change_Note__c</fullName>
    <inlineHelpText>Enter any additional notes regarding the temperature change.</inlineHelpText>
    <label>Temperature Change Note</label>
    <length>100</length>
    <type>Text</type>
</CustomField>