force-app/main/default/objects/Account/fields/Temperature_Changed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Temperature_Changed_Reason__c</fullName>
    <inlineHelpText>Please enter the reason you are changing the temperature on this account.</inlineHelpText>
    <label>Temperature Changed Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>