force-app/main/default/objects/Account/fields/Total_Current_ARR__c.field-meta.xml
<CustomField>
    <fullName>Total_Current_ARR__c</fullName>
    <label>Total Current ARR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>