force-app/main/default/objects/Account/fields/VAT_Number__c.field-meta.xml
<CustomField>
    <fullName>VAT_Number__c</fullName>
    <description>Value Added Tax (VAT) Number</description>
    <inlineHelpText>Value Added Tax (VAT) Number to be passed to Workday</inlineHelpText>
    <label>VAT Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>