force-app/main/default/objects/Account/fields/Workday_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Workday_Customer_Id__c</fullName>
    <externalId>true</externalId>
    <label>Workday Customer Id</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>