force-app/main/default/objects/Account/fields/Workday_Sync_Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>Workday_Sync_Correlation_Id__c</fullName>
    <label>Workday Sync Correlation Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>