force-app/main/default/objects/Account/fields/Workday_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Workday_Sync_Status__c</fullName>
    <label>Workday Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>