force-app/main/default/objects/Account/fields/XDR__c.field-meta.xml
<CustomField>
    <fullName>XDR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>XDR</label>
    <type>Checkbox</type>
</CustomField>