force-app/main/default/objects/Account/listViews/ffaws__OnHoldForCollections.listView-meta.xml
<ListView>
    <fullName>ffaws__OnHoldForCollections</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>c2g__CollectionsOnHold__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Accounts On Hold for collections</label>
</ListView>