force-app/main/default/objects/Account/listViews/ffaws__Vendor_Accounts.listView-meta.xml
<ListView>
    <fullName>ffaws__Vendor_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>c2g__CODAFinanceContact__c</columns>
    <columns>c2g__CODAPaymentMethod__c</columns>
    <columns>c2g__CODAAccountTradingCurrency__c</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>c2g__CODAAccountsPayableControl__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Vendor Accounts</label>
</ListView>